# cpp-homework

./: CMakeLists.txt  README.md
1/: Fraction.cpp  Fraction.h  fraction.cpp  fraction.h  main.cpp
10/: main.cpp
2/: Triangle.cpp  Triangle.h
3/: Octagon.cpp  Octagon.h  RegularPolygon.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
4/: Rectangle.cpp  Rectangle.h  main.cpp
5/: Parallelepiped.cpp  Parallelepiped.h  Rectangle.cpp  Rectangle.h  main.cpp
6/: main.cpp
7/: file.txt  file.txt~
8/: main.cpp
9/: CreateBinFIle.h  CreateBinFile.cpp  CreateFile.cpp  CreateFile.h  main.cpp
AbstractClass/: Octagon.cpp  Octagon.h
AbstractClass/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
AbstractClass/nbproject/private/: private.xml
BInFile/: CreateFile.cpp  CreateFile.h
BInFile/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
BInFile/nbproject/private/: private.xml
ClassRectangle/: main.cpp
ClassRectangle/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
Class_Inheritance/: Rectangle.cpp  Rectangle.h  main.cpp
Class_Inheritance/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Class_Inheritance/nbproject/private/: private.xml
FileProg/: main.cpp
FileProg/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
MaxMinElements/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
MaxMinReferences/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
MaxMinReferences/nbproject/private/: private.xml
laba-1/: laba-1.sln
laba-1/laba-1/: fraction.cpp  fraction.h  laba-1.vcxproj  laba-1.vcxproj.filters
laba-2/: laba-2.sln
laba-2/laba-2/: Triangle.h  Vector.cpp  Vector.h  laba-2.vcxproj  laba-2.vcxproj.filters  main.cpp
