cmake_minimum_required(VERSION 3.6)
project(cpp_homework)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        3/build/Debug/Cygwin-Windows/main.o
        3/build/Debug/Cygwin-Windows/main.o.d
        3/build/Debug/Cygwin-Windows/Octagon.o
        3/build/Debug/Cygwin-Windows/Octagon.o.d
        3/build/Debug/Cygwin-Windows/Square.o
        3/build/Debug/Cygwin-Windows/Square.o.d
        3/build/Debug/Cygwin-Windows/Triangle.o
        3/build/Debug/Cygwin-Windows/Triangle.o.d
        3/dist/Debug/Cygwin-Windows/abstractclass.exe
        3/dist/Debug/GNU-Linux-x86/abstractclass
        3/nbproject/private/configurations.xml
        3/nbproject/private/launcher.properties
        3/nbproject/private/Makefile-variables.mk
        3/nbproject/private/private.xml
        3/nbproject/configurations.xml
        3/nbproject/Makefile-Debug.mk
        3/nbproject/Makefile-impl.mk
        3/nbproject/Makefile-Release.mk
        3/nbproject/Makefile-variables.mk
        3/nbproject/Package-Debug.bash
        3/nbproject/Package-Release.bash
        3/nbproject/project.xml
        3/main.cpp
        3/Makefile
        3/Octagon.cpp
        3/Octagon.h
        3/RegularPolygon.h
        3/Square.cpp
        3/Square.h
        3/Triangle.cpp
        3/Triangle.h
    BInFile/build/Debug/Cygwin-Windows/CreateFile.o
    BInFile/build/Debug/Cygwin-Windows/CreateFile.o.d
    BInFile/build/Debug/Cygwin-Windows/main.o
    BInFile/build/Debug/Cygwin-Windows/main.o.d
    BInFile/build/Debug/GNU-Linux-x86/CreateBinFile.o
    BInFile/build/Debug/GNU-Linux-x86/CreateBinFile.o.d
    BInFile/build/Debug/GNU-Linux-x86/CreateFile.o
    BInFile/build/Debug/GNU-Linux-x86/CreateFile.o.d
    BInFile/build/Debug/GNU-Linux-x86/main.o
    BInFile/build/Debug/GNU-Linux-x86/main.o.d
    BInFile/dist/Debug/Cygwin-Windows/binfile.exe
    BInFile/dist/Debug/GNU-Linux-x86/binfile
    BInFile/nbproject/private/configurations.xml
    BInFile/nbproject/private/launcher.properties
    BInFile/nbproject/private/Makefile-variables.mk
    BInFile/nbproject/private/private.xml
    BInFile/nbproject/configurations.xml
    BInFile/nbproject/Makefile-Debug.mk
    BInFile/nbproject/Makefile-impl.mk
    BInFile/nbproject/Makefile-Release.mk
    BInFile/nbproject/Makefile-variables.mk
    BInFile/nbproject/Package-Debug.bash
    BInFile/nbproject/Package-Release.bash
    BInFile/nbproject/project.xml
    BInFile/CreateBinFile.cpp
    BInFile/CreateBinFIle.h
    BInFile/CreateFile.cpp
    BInFile/CreateFile.h
    BInFile/file
    BInFile/main.cpp
        5/build/Debug/GNU-Linux-x86/main.o
        5/build/Debug/GNU-Linux-x86/main.o.d
        5/build/Debug/GNU-Linux-x86/Rectangle.o
        5/build/Debug/GNU-Linux-x86/Rectangle.o.d
        5/dist/Debug/GNU-Linux-x86/class_inheritance
        5/nbproject/private/configurations.xml
        5/nbproject/private/launcher.properties
        5/nbproject/private/Makefile-variables.mk
        5/nbproject/private/private.xml
        5/nbproject/configurations.xml
        5/nbproject/Makefile-Debug.mk
        5/nbproject/Makefile-impl.mk
        5/nbproject/Makefile-Release.mk
        5/nbproject/Makefile-variables.mk
        5/nbproject/Package-Debug.bash
        5/nbproject/Package-Release.bash
        5/nbproject/project.xml
        5/main.cpp
        5/Makefile
        5/Rectangle.cpp
        5/Rectangle.h
        4/build/Debug/GNU-Linux-x86/main.o
        4/build/Debug/GNU-Linux-x86/main.o.d
        4/dist/Debug/GNU-Linux-x86/classrectangle
        4/nbproject/private/configurations.xml
        4/nbproject/private/Makefile-variables.mk
        4/nbproject/private/private.xml
        4/nbproject/configurations.xml
        4/nbproject/Makefile-Debug.mk
        4/nbproject/Makefile-impl.mk
        4/nbproject/Makefile-Release.mk
        4/nbproject/Makefile-variables.mk
        4/nbproject/Package-Debug.bash
        4/nbproject/Package-Release.bash
        4/nbproject/project.xml
        4/main.cpp
        4/Makefile
    FileProg/build/Debug/GNU-Linux-x86/main.o
    FileProg/build/Debug/GNU-Linux-x86/main.o.d
    FileProg/dist/Debug/GNU-Linux-x86/fileprog
    FileProg/nbproject/private/configurations.xml
    FileProg/nbproject/private/launcher.properties
    FileProg/nbproject/private/Makefile-variables.mk
    FileProg/nbproject/private/private.xml
    FileProg/nbproject/configurations.xml
    FileProg/nbproject/Makefile-Debug.mk
    FileProg/nbproject/Makefile-impl.mk
    FileProg/nbproject/Makefile-Release.mk
    FileProg/nbproject/Makefile-variables.mk
    FileProg/nbproject/Package-Debug.bash
    FileProg/nbproject/Package-Release.bash
    FileProg/nbproject/project.xml
    FileProg/file.txt
    FileProg/main.cpp
    FileProg/Makefile
        1/fraction.cpp
        1/fraction.h
        1/main.cpp
        2/main.cpp
        2/Triangle.cpp
        2/Triangle.h
    MaxMinElements/build/Debug/GNU-Linux-x86/main.o
    MaxMinElements/build/Debug/GNU-Linux-x86/main.o.d
    MaxMinElements/dist/Debug/GNU-Linux-x86/maxminelements
    MaxMinElements/nbproject/private/configurations.xml
    MaxMinElements/nbproject/private/Makefile-variables.mk
    MaxMinElements/nbproject/private/private.xml
    MaxMinElements/nbproject/configurations.xml
    MaxMinElements/nbproject/Makefile-Debug.mk
    MaxMinElements/nbproject/Makefile-impl.mk
    MaxMinElements/nbproject/Makefile-Release.mk
    MaxMinElements/nbproject/Makefile-variables.mk
    MaxMinElements/nbproject/Package-Debug.bash
    MaxMinElements/nbproject/Package-Release.bash
    MaxMinElements/nbproject/project.xml
    MaxMinElements/main.cpp
    MaxMinElements/Makefile
    MaxMinReferences/build/Debug/GNU-Linux-x86/main.o
    MaxMinReferences/build/Debug/GNU-Linux-x86/main.o.d
    MaxMinReferences/dist/Debug/GNU-Linux-x86/maxminreferences
    MaxMinReferences/nbproject/private/configurations.xml
    MaxMinReferences/nbproject/private/launcher.properties
    MaxMinReferences/nbproject/private/Makefile-variables.mk
    MaxMinReferences/nbproject/private/private.xml
    MaxMinReferences/nbproject/configurations.xml
    MaxMinReferences/nbproject/Makefile-Debug.mk
    MaxMinReferences/nbproject/Makefile-impl.mk
    MaxMinReferences/nbproject/Makefile-Release.mk
    MaxMinReferences/nbproject/Makefile-variables.mk
    MaxMinReferences/nbproject/Package-Debug.bash
    MaxMinReferences/nbproject/Package-Release.bash
    MaxMinReferences/nbproject/project.xml
    MaxMinReferences/main.cpp
    MaxMinReferences/Makefile
    README.md 4/Rectangle.h 4/Rectangle.cpp 5/Parallelepiped.cpp 5/Parallelepiped.h)

add_executable(cpp_homework ${SOURCE_FILES})